Revision history for Perl distribution Win32-Mechanize-NotepadPlusPlus

TODO
    - fix arrows in docs

v0.001 2020-xx-xx
    - Initial release

v0.000001
    - Initial pre-release development